cli/tests/snapshot/inputs/errors/destructuring_assign_fail.ncl
# capture = 'stderr'
# command = ['eval']
let {a=x} = {a=1}
in a == 1
